# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.
    4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
       It is for convenience. Do not mistake this for the actual file.

  08 Aug 2004; Brian Harring <ferringb@gentoo.org> pym/portage.py: 
  Leave /var/tmp w/out it's own permissions, chowning/chmoding just 
  /var/tmp/portage (#37521).

  08 Aug 2004; Brian Harring <ferringb@gentoo.org> bin/ebuild.sh 
  pym/portage.py: Corrected bug in profile.bashrc support, added aliases 
  for saving/restoring IFS (remove_path_entry and profile.bashrc loop 
  adjust IFS temporarily).  Closes #59749.

  08 Aug 2004; Brian Harring <ferringb@gentoo.org> dispatch-conf: 
  Converted os.rename calls to shutil.move; the former can't cross fs's,
  the latter can. (#46148)

  07 Aug 2004; Nicholas Jones <carpaski@gentoo.org> portage.py: Fixed the
  cache updates so that an env-update forces ld updating.
  
  07 Aug 2004; Jason Stubbs <jstubbs@gentoo.org> pym/portage.py
  pym/portage_dep.py: Added a new parameter to use_reduce so that !arch?
  checks can be adhered to even when matchall=1 and arch is not is masklist.

  07 Aug 2004; Jason Stubbs <jstubbs@gentoo.org> pym/portage.py
  pym/portage_dep.py: Added profile masked use flags to repoman check.
  Moved || refactoring to a separate function. Reworked use_reduce logic
  into simpler sections.

  05 Aug 2004; Brian Harring <ferringb@gentoo.org> pym/portage_dep.py:
  What can I say, I can't get enough of bug (#59574).
  I'm operating under the assumption there still is a bug in the 
  use_reduce logic, soo I've left a fairly massive amount of debugging 
  code in place that's currently disabled.  It's *very* useful for 
  tracking exactly what/how use_reduce decides on a operator node.
